--- a/sass/base/_conteiner.scss
+++ b/sass/base/_conteiner.scss
@@ -6,15 +6,29 @@
     margin-right: auto;
 
     display: block;
+
 }
 
+
 .conteiner {
-    max-width: 1200px;
+    width: 480px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
+    background-color: blue;
+
+    // @media screen and (max-width: 768px) {
+    //     width: 738px;
+    //     background-color: red;
+    // }
+
+    // @media screen and (max-width: 1600px) {
+    //     width: 1200px;
+    //     background-color: yellow;
+    // }
 }
+
 .conteiner-footer {
     align-items: baseline;
     display: flex;
