--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -31,3 +31,9 @@ p {
     text-decoration: none;
     list-style: none;
 }
+
+img {
+    max-width: 100%;
+    display: block;
+    height: auto;
+}
