--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -3,16 +3,16 @@
 
     &__item {
         width: 100%;
-        height: 100%;
+        height: auto;
 
         @media screen and (min-width: 768px) {
-            width: 354px;
+            max-width: 354px;
         }
 
 
 
         @media screen and (min-width: 1200px) {
-            width: 270px;
+            max-width: 270px;
         }
 
 
