--- a/css/main.css
+++ b/css/main.css
@@ -65,10 +65,18 @@ footer {
 .title {
   color: var(--title-text-color);
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.17;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    margin-bottom: 50px;
+  }
 }
 
 .section {
@@ -323,23 +331,32 @@ img {
   background-image: url(../images/icon/astronaut.svg);
 }
 
+.footer-section {
+  margin-left: auto;
+  margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
 .conteiner-footer {
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 @media screen and (min-width: 768px) {
   .conteiner-footer {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -ms-flex-pack: distribute;
         justify-content: space-around;
+    max-width: 768px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -350,6 +367,7 @@ img {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    max-width: 1200px;
   }
 }
 
@@ -375,6 +393,11 @@ img {
 }
 .footer__item:last-child {
   margin-bottom: 0;
+}
+@media screen and (min-width: 1200px) {
+  .footer__item {
+    margin-bottom: 0;
+  }
 }
 
 .logo-footer {
@@ -553,25 +576,25 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 480px;
+  max-width: 480px;
   padding: 16px 15px;
 }
 @media screen and (min-width: 768px) {
   .header-container {
-    width: 768px;
+    max-width: 768px;
     padding: 0;
   }
 }
 @media screen and (min-width: 1200px) {
   .header-container {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
 
 .main-nav {
   margin-left: auto;
   margin-right: auto;
-  width: 480px;
+  max-width: 480px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -582,12 +605,12 @@ img {
 }
 @media screen and (min-width: 768px) {
   .main-nav {
-    width: 768px;
+    max-width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
   .main-nav {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
 
@@ -712,8 +735,8 @@ img {
 .hero {
   background-color: #2f303a;
   max-width: 480px;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   margin-left: auto;
   margin-right: auto;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-s.jpg);
@@ -1196,10 +1219,10 @@ textarea:focus + .modal-icon {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
 
 .template {
-  gap: 30px;
   -webkit-transition-property: -webkit-box-shadow;
   transition-property: -webkit-box-shadow;
   transition-property: box-shadow;
@@ -1210,9 +1233,13 @@ textarea:focus + .modal-icon {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   max-width: 100%;
   height: auto;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 @media screen and (min-width: 768px) {
   .template {
@@ -1241,6 +1268,12 @@ c .template:hover, .template:focus {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+}
+.template__content p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.03em;
 }
 
 .template__card {
@@ -1519,6 +1552,7 @@ c .template:hover, .template:focus {
 
 .mobile-menu__container {
   max-width: 480px;
+  height: 100%;
   padding: 48px 40px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1544,7 +1578,7 @@ c .template:hover, .template:focus {
 }
 
 .mobile-menu__nav {
-  margin-bottom: 308px;
+  margin-bottom: auto;
 }
 
 .mobile-menu__item {
