--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,7 +1,7 @@
 body {
     color: var(--primary-text-color);
     background-color: var(--primary-white-color);
-   
+
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.03em;
     box-sizing: border-box;
@@ -17,6 +17,7 @@ header {
     margin-left: auto;
     margin-right: auto;
 }
+
 footer {
     background-color: #2f303a;
     font-family: inherit;
@@ -36,6 +37,7 @@ footer {
     flex-wrap: wrap;
     gap: 30px;
 }
+
 .current::after {
     content: '';
     position: absolute;
@@ -52,10 +54,15 @@ footer {
 
 .title {
     color: var(--title-text-color);
-    @include FontWSL (700, 36px, 1.16);
+    @include FontWSL (700, 28px, 1.17);
     // font-weight: 700;
     // font-size: 36px;
     // line-height: 1.16;
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+        @include FontWSL (700, 36px, 1.16);
+        margin-bottom: 50px;
+    }
 }
