--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,20 +1,32 @@
-.conteiner-footer {
-    align-items: baseline;
-    display: block;
+.footer-section {
+    margin-left: auto;
+    margin-right: auto;
     margin-left: auto;
     margin-right: auto;
 
+    display: block;
+}
+
+.conteiner-footer {
+
+    align-items: baseline;
+    display: block;
+
+
     @media screen and (min-width: 768px) {
-        display: inline-flex;
+        display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
+        max-width: 768px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     @media screen and (min-width: 1200px) {
         display: flex;
         justify-content: space-between;
-        // flex-wrap: wrap;
-        // justify-content: center;
+
+        max-width: 1200px;
     }
 }
 
@@ -32,6 +44,7 @@
     @media screen and (min-width: 1200px) {
         text-align: left;
         margin-top: 12px;
+
     }
 }
 
@@ -41,6 +54,11 @@
     &:last-child {
         margin-bottom: 0;
     }
+
+    @media screen and (min-width: 1200px) {
+
+        margin-bottom: 0;
+    }
 }
 
 .logo-footer {
@@ -48,6 +66,7 @@
 
     @media screen and (min-width: 1200px) {
         text-align: left;
+
     }
 }
 
