--- a/sass/components/_molile-menu.scss
+++ b/sass/components/_molile-menu.scss
@@ -48,6 +48,7 @@
 
 .mobile-menu__container {
     max-width: 480px;
+    height: 100%;
     padding: 48px 40px;
     display: flex;
     flex-direction: column;
@@ -64,7 +65,7 @@
 }
 
 .mobile-menu__nav {
-    margin-bottom: 308px;
+    margin-bottom: auto;
 
 
 
