--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -5,6 +5,7 @@
     gap: 8px;
     justify-content: flex-start;
 
+
     @media screen and (min-width: 768px) {
         justify-content: center;
         margin-bottom: 30px;
@@ -19,27 +20,25 @@
     color: var(--title-text-color);
 
     @include FontWSL (700, 18px, 2);
-    // font-weight: 700;
-    // font-size: 18px;
-    // line-height: 2;
+
     letter-spacing: 0.06em;
+    margin-bottom: 4px;
+
+
 }
 
 
-
-
-
 .template {
-    gap: 30px;
-
     transition-property: box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-    // width: 450px;
+
     max-width: 100%;
     height: auto;
-    flex-grow: 1;
+
+    display: flex;
+    flex-direction: column;
 
     @media screen and (min-width: 768px) {
         max-width: 354px;
@@ -68,9 +67,13 @@
         margin-top: 0;
         padding: 20px 24px;
         flex-grow: 1;
-        // height: 100%;
-        // display: flex;
-        // flex-direction: column;
+
+        & p {
+            @include FontWSL (400, 16px, 1.9);
+
+            letter-spacing: 0.03em;
+        }
+
 
     }
 }
@@ -82,6 +85,7 @@
     overflow: hidden;
     width: 100%;
     height: auto;
+
 
 
     &__text {
